hphp/hack/test/typecheck/const_type_violated_constraint.php.exp
File "const_type_violated_constraint.php", line 4, characters 9-29:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 24, characters 49-50:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 24, characters 55-62:
  This type constraint is violated
  File "hackarray.hhi", line 24, characters 55-62:
  Expected `arraykey`
  File "const_type_violated_constraint.php", line 4, characters 14-20:
  But got `?string`
