hphp/hack/test/typecheck/const_type_violated_constraint.php
<?hh // strict

class Test {
  const dict<?string, string> test_dict = dict[
    '1' => '1',
  ];
}
